@@ -1,7 +1,8 @@
 2005-12-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/news.ihtml:
 	* site/about/pubs.html: Mention linuxjournal.com article.
-	Add cover picture.
+	Add cover picture.  Found stronger quote.
 
 2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
